src/server/orchestration/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neuraserver-service
  labels:
    app: neuraserver
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5500
  selector:
    app: neuraserver
